# nordvpn-cli-macos

./: .gitignore  PLAN.md  README.md  pyproject.toml
.githooks/: commit-msg
src/nordvpn_cli/: __init__.py  allowlist.py  api.py  auth.py  cli.py  config.py  ui.py  url_handler.py  wireguard.py
src/nordvpn_cli/tui/: __init__.py  connect.py  screens.py  widgets.py
