[project]
name = "nordvpn-cli"
version = "0.1.0"
description = "CLI for NordVPN on macOS using WireGuard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "rich>=14.2.0",
    "textual>=3.0.0",
    "typer>=0.20.0",
]

[project.scripts]
nordvpn = "nordvpn_cli.cli:app"
nordvpn-tui = "nordvpn_cli.tui:main"

[tool.uv]
package = true

[tool.uv.sources]
nordvpn-cli = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nordvpn_cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "UP",          # pyupgrade
    "ARG",         # flake8-unused-arguments
    "SIM",         # flake8-simplify
    "TCH",         # flake8-type-checking
    "PTH",         # flake8-use-pathlib
    "PL",          # pylint
    "RUF",         # ruff-specific
    "ANN",         # flake8-annotations
    "C90",         # mccabe complexity
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 3
max-statements = 20
max-branches = 8
